--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "zeitgrep"
 version = "0.1.0"
 edition = "2024"
+license = "MIT"
+description = "Find frecen results in git repositories using regular expressions"
 
 [dependencies]
 clap = { version = "4.5.37", features = ["derive"] }
