--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "zeitgrep"
-version = "0.1.6"
+version = "0.1.7"
 edition = "2024"
 license = "MIT"
-description = "Find frecen results in git repositories using regular expressions"
+description = "Find frecent results in git repositories using regular expressions"
 
 [dependencies]
 clap = { version = "4.5.37", features = ["derive"] }
