--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "zeitgrep"
-version = "0.1.10"
+version = "0.2.0"
 edition = "2024"
 license = "MIT"
 description = "Find frecent results in git repositories using regular expressions"
 
 [dependencies]
 clap = { version = "4.5.37", features = ["derive"] }
+frecenfile = "0.2.3"
 git2 = "0.20.1"
 grep = "0.3.2"
 ignore = "0.4.23"
