--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,8 @@ git2 = "0.20.1"
 grep = "0.3.2"
 ignore = "0.4.23"
 termcolor = "1.4.1"
+
+[dev-dependencies]
+assert_cmd = "2"
+predicates = "3"
+tempfile = "3"
