--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,10 @@ git2 = "0.20.1"
 grep = "0.3.2"
 ignore = "0.4.23"
 termcolor = "1.4.1"
+minijinja = "1.0.11"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+walkdir = "2.4"
 
 [dev-dependencies]
 assert_cmd = "2"
